styles.css
body {
  /*background-color: rgb(64, 110, 121);*/
  /* button BG colors rgb(218, 123, 34);*/
  background-image: url("images/space2.webp");
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  font-family: Arial, Helvetica, sans-serif;
}

div#intro.info p {
  position: absolute;
  top: 30px;
  left: 6em;
  font-style: italic;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  width: 13em;
}

p {
  color: white;
  cursor: text;
  line-height: 60px;
  font-size: 150%;
}
/* Center Div element with different images everytime 
  user interacts with it */

#intro > picture > img {
  position: absolute;
  top: 0px;
  left: 95px;
  width: 68.2em;
  height: 40em;
}

.side-container1 {
  position: absolute;
  left: 0px;
  top: 0px;
  background: black;
  /* background: url("images/pink.jpg"); */
  width: 95px;
  height: 40em;
  opacity: 0.9;
}

.side-container2 {
  position: absolute;
  right: 0px;
  top: 0px;
  background: black;
  /* background: url("images/pink.jpg"); */
  width: 95px;
  height: 40em;
  opacity: 0.9;
  cursor: pointer;
}

.right_arrow {
  margin: 275% 8.1%;
  height: 5em;
  width: 5em;
}

.picture_end {
  position: relative;
  left: 40px;
  top: 19em;
  background: rgb(71, 157, 243);
  height: 12px;
  width: 12px;
  border-radius: 50%;
}

button.slide {
  position: relative;
  left: 24em;
  top: 0em;
  margin-right: 15px;
  background: rgb(218, 123, 34);
  border: 0;
  border-radius: 50%;
  width: 13px;
  height: 13px;
}

/* hover styles */

button.slide:hover {
  background: white;
}

.side-container2:hover {
  background: grey;
}

